--- a/om os.html
+++ b/om os.html
@@ -76,7 +76,7 @@
                     <img src="images/v%C3%A6rdi%203.png">
                 </div>
                 </div>
-                
+                <div id="articel">
                  <p id="Omos">Det hele begyndte med en lille kat
  og en lakridsopskrift medbragt af
  Xaver Fassin fra Sicilien. Det dannede 
@@ -86,7 +86,7 @@ Katjes-familie og skabe unikke produkter.</p>
 <p id="Omos2">Foruden vores produkter er vores 
 virksomheds succes også baseret 
 på en meget speciel opskrift:  naturlighed, bæredygtig, miljø og kvalitet! </p>
-                    
+                     </div>
         </section>
         </main>
          <footer>
