--- a/om os.html
+++ b/om os.html
@@ -76,7 +76,7 @@
                     <img src="images/v%C3%A6rdi%203.png">
                 </div>
                 </div>
-                <div id="articel">
+                <div id="textomos">
                  <p id="Omos">Det hele begyndte med en lille kat
  og en lakridsopskrift medbragt af
  Xaver Fassin fra Sicilien. Det dannede 
