--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
                     <p> &#169;2020 Jenny Mae M. Berces. All rights deserverd.</p> 
                 </div>
                 <div id="socialmedie">
-                    <a class="icons" href="/">
+                    <a class="icons" href="https://www.facebook.com/Katjes/">
                         <img src="/images/fb-white-kopi.png" alt="fb" />
                     </a>
-                    <a class="icons" href="/">
+                    <a class="icons" href="https://www.instagram.com/katjes_official/?hl=da">
                         <img src="/images/instagramwhite-kopi.png" alt="instagram" />
                     </a>
 
