--- a/om os.html
+++ b/om os.html
@@ -70,11 +70,10 @@
                 <h1 id="contact">Om os</h1>
                  <section id="indholdomværdier">
                  <div class="Værdier">
-                <div id="værdierne">
                     <img src="images/V%C3%A6rdie%201-3.png">
                     <img src="/images/V%C3%A6rdi%202-4.png">
                     <img src="images/v%C3%A6rdi%203.png">
-                </div>
+             
                 </div>
                 <div id="textomos">
                  <p id="Omos">Det hele begyndte med en lille kat
@@ -98,10 +97,10 @@ på en meget speciel opskrift:  naturlighed, bæredygtig, miljø og kvalitet! </
                     <p> &#169; 2020 Jenny Mae M. Berces. All rights deserverd.</p>  
                 </div>
                 <div id="socialmedie">
-                    <a class="icons" href="/">
+                    <a class="icons" href="https://www.facebook.com/Katjes/">
                         <img src="/images/fb-white-kopi.png" alt="fb" />
                     </a>
-                    <a class="icons" href="/">
+                    <a class="icons" href="https://www.instagram.com/katjes_official/?hl=da">
                         <img src="/images/instagramwhite-kopi.png" alt="instagram" />
                     </a>
                 </div>
