--- a/konkurrence.html
+++ b/konkurrence.html
@@ -71,7 +71,7 @@
                 <h1 id="contact">Konkurrence</h1>
                  
            <section id="indhold">
-                 <img id="Konkurrence" src="/images/IMG_2195.jpg">
+                 <img id="Konkurrence" src="/images/IMG_2195.jpg" alt="Konkurrence til Katjes Salte Fisk">
                <div id="textkonkurrence">
                  <p id="vind">Vind en kurv flyd med salte fisk!</p>
                  <p id= "foratdeltage">
@@ -94,7 +94,7 @@ eller fysisk og bruger hashtagget
                     <p> &#169; 2020 Jenny Mae M. Berces. All rights deserverd..</p>  
                 </div>
                 <div id="socialmedie">
-                    <a class="icons" href=""https://www.facebook.com/Katjes/>
+                    <a class="icons" href="https://www.facebook.com/Katjes/">
                         <img src="/images/fb-white-kopi.png" alt="fb" />
                     </a>
                     <a class="icons" href="https://www.instagram.com/katjes_official/?hl=da">
