--- a/kontakt.html
+++ b/kontakt.html
@@ -102,10 +102,10 @@
                 </div>
                 <div id="socialmedie">
                     <a class="icons" href="https://www.facebook.com/Katjes/">
-                        <img src="/images/fb-white-kopi.png" alt="fb" />
+                        <img src="/images/fb-white-kopi.png" alt="fb katjes" />
                     </a>
                     <a class="icons" href="https://www.instagram.com/katjes_official/?hl=da">
-                        <img src="/images/instagramwhite-kopi.png" alt="instagram" />
+                        <img src="/images/instagramwhite-kopi.png" alt="instagram katjes" />
                     </a>
                 </div>
             </div>
