--- a/om os.html
+++ b/om os.html
@@ -70,9 +70,9 @@
                 <h1 id="contact">Om os</h1>
                  <section id="indholdomværdier">
                  <div class="Værdier">
-                    <img src="images/V%C3%A6rdie%201-3.png">
-                    <img src="/images/V%C3%A6rdi%202-4.png">
-                    <img src="images/v%C3%A6rdi%203.png">
+                    <img src="images/V%C3%A6rdie%201-3.png" alt="Naturlighed">
+                    <img src="/images/V%C3%A6rdi%202-4.png" alt="Bæredygtighed & miljø">
+                    <img src="images/v%C3%A6rdi%203.png" alt="Kvalitet">
              
                 </div>
                 <div id="textomos">
