--- a/saltefisk.html
+++ b/saltefisk.html
@@ -70,7 +70,7 @@
                 <h1 id="contact">Salte Fisk</h1>
              
               <section id="indhold">
-                 <img id="omos" src="/images/om%20os.jpg">
+                 <img id="omos" src="/images/om%20os.jpg" alt="Katjes Salte Fisk ">
 
                  <div id="saltefisktext"> 
                  <p id= "omsaltefisk">De lækre saltede fisk kan også nydes af vegetarer da de nu er produceret uden animalsk gelatine . Den blødelakrids kommer fra lakridsroden glychrrhiza glabrabusken og er en nydelsefor lakrids kender.</p>
