--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         </header>
         <main id="landingMain">
            <div id="mainlanding">
-          <img id="Saltefiskmobil" src="/images/den%20rigtigt%20mobilpage-1.png">
-               <img id="saltefiskweb" src="images/landing%20page%20web2-2.png">
+          <img id="Saltefiskmobil" src="/images/den%20rigtigt%20mobilpage-1.png" alt="læs om Katjes salte fisk">
+               <img id="saltefiskweb" src="images/landing%20page%20web2-2.png" alt="læs om Katjes salte fisk">
             <a id="læsmere" href="saltefisk.html">Læs mere</a>
             </div> 
             
