--- a/konkurrence.html
+++ b/konkurrence.html
@@ -73,7 +73,7 @@
            <section id="indhold">
                  <img id="Konkurrence" src="/images/IMG_2195.jpg" alt="Konkurrence til Katjes Salte Fisk">
                <div id="textkonkurrence">
-                 <p id="vind">Vind en kurv flyd med salte fisk!</p>
+                 <p id="vind">Vind en kurv flydt med salte fisk!</p>
                  <p id= "foratdeltage">
 For at deltage, skal i uploade i 
 billede på instagram hvor i skal 
